# interpreter

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
gtest/: comparison_gtests.cpp  gtestmain.cpp  interpreter_gtests.cpp  lexing_gtests.cpp  parsing_gtests.cpp  preprocessing_gtests.cpp  token_gtests.cpp
src/: comparison.cpp  comparison.hpp  interpreter.cpp  interpreter.hpp  lexing.cpp  lexing.hpp  location.cpp  location.hpp  main.cpp  parsing.cpp  parsing.hpp  preprocessing.cpp  preprocessing.hpp  runtime_errors.cpp  runtime_errors.hpp  token.cpp  token.hpp
